--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,5 +6,6 @@ export(getInjuriesData)
 export(getPestManagementData)
 export(getSystemicData)
 export(getWeedData)
+export(getWeedratingData)
 export(getYieldData)
 export(loginSKEP)
